--- a/src/components/shared/Intro.astro
+++ b/src/components/shared/Intro.astro
@@ -1,20 +1,30 @@
 ---
 import classes from '@/data/styles.json';
-
+import { Image } from 'astro:assets';
+import type { ImageMetadata } from 'astro';
 interface Props {
   preheading?: string;
   heading: string;
   description: string;
+  backgroundImage?: ImageMetadata;
 }
 
-const { preheading, heading, description } = Astro.props;
+const { preheading, heading, description, backgroundImage } = Astro.props;
 ---
 
-<section
-  class="bg-[url('https://images.unsplash.com/photo-1766039132515-ea88dc3950bd?q=80&w=3088&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)')] bg-cover bg-center"
->
-  <div class="absolute inset-0 bg-primary-bg opacity-50"></div>
-  <div class={`${classes.container} pt-64 pb-8`}>
+<section class="relative">
+  {
+    backgroundImage && (
+      <Image
+        src={backgroundImage}
+        alt="Background"
+        class="absolute inset-0 w-full h-full object-cover -z-10"
+      />
+      <div class="absolute inset-0 bg-primary-bg opacity-50"></div>
+    )
+  }
+  
+  <div class:list={[classes.container, { 'pt-64': backgroundImage }, 'pb-8',]}>
     <div class="flex flex-col items-start text-left space-y-2">
       {preheading && <span class={classes.preHeading}>{preheading}</span>}
       <h1 class={classes.sectionHeading}>
