--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,9 @@ import styles from '@/data/styles.json';
 ---
 
 <section class="flex items-center relative overflow-hidden pt-6 pb-24" id="hero">
-  <div class={`${styles.container} w-full grid grid-cols-1 lg:grid-cols-2 gap-16 items-center`}>
+  <div
+    class="max-w-7xl mx-auto px-6 lg:px-12 w-full grid grid-cols-1 lg:grid-cols-2 gap-16 items-center"
+  >
     <div class="space-y-8 order-2 lg:order-1">
       <div class="space-y-2">
         <span class={styles.preHeading}>Senior Frontend Developer</span>
@@ -15,8 +17,10 @@ import styles from '@/data/styles.json';
         </h1>
       </div>
       <p class="text-lg md:text-md text-secondary-text dark:text-gray-400 max-w-xl leading-relaxed">
-        I help forward-thinking companies build performant, accessible, and beautiful web
-        applications using the modern React ecosystem.
+        I am a Senior Front-End Engineer with over 7 years of experience specializing in the
+        development of intuitive, accessible, and high-performance web and mobile applications .
+        Currently based in Toronto, Ontario, I deliver scalable solutions that transform complex
+        problems into seamless user experiences.
       </p>
       <div class="flex flex-wrap gap-4 pt-4">
         <Button style="primary" href="#work">View Recent Work</Button>
