--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -13,7 +13,7 @@ const description =
   "A chronological overview of my professional career, the roles I've held, and the technical expertise I've cultivated along the way.";
 ---
 
-<Layout title={title} description={description} hasHero>
+<Layout title={title} description={description}>
   <Intro preheading={preHeading} heading={title} description={description} />
   <section class={`${styles.container} py-16`}>
     <ExperienceComponent title="Work History" experiences={experiences.workExperience} />
