--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '@/components/Hero.astro';
+import RecentWork from '@/components/RecentWork.astro';
 import RecentProjects from '@/components/RecentProjects.astro';
 import SidebySide from '@/components/SidebySide.astro';
 
@@ -12,5 +13,6 @@ const description =
 <Layout title={title} description={description}>
   <Hero />
   <SidebySide />
+  <RecentWork />
   <RecentProjects />
 </Layout>
