--- a/src/components/ThumbnailProject.astro
+++ b/src/components/ThumbnailProject.astro
@@ -11,23 +11,33 @@ const { id, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
 ---
 
 <article
-  class="group flex flex-col md:flex-row h-full bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-800 rounded-[2.5rem] p-3 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 relative overflow-hidden"
+  class="group flex flex-col md:flex-row h-full bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-800 rounded-md p-3 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 relative overflow-hidden"
 >
-  <div
-    class="w-full md:w-4/12 aspect-square md:aspect-auto rounded-[2rem] bg-gray-100 dark:bg-[#1a1a1a] overflow-hidden relative"
-  >
-    <div
-      class="absolute inset-0 bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] dark:bg-[radial-gradient(#333_1px,transparent_1px)] [background-size:12px_12px] opacity-50"
-    >
-    </div>
-    <img
-      alt="Prism UI Kit"
-      class="relative z-10 w-full h-full object-contain p-8 drop-shadow-xl transition-transform duration-500 group-hover:scale-110"
-      src="https://lh3.googleusercontent.com/aida-public/AB6AXuAXuP53Ulpc7hX0im2eezSCvlT-7ycJhG-T9V0BrUqv-FmcbQsaftja_H8nchYzS7D_EleorxXH9_s7pxYLYvzKd68-GjekdgtPUFiFVSOmhNzooIcnyTqb01yDGr4EGIdvDcJS7yXQXhpRsMWnxjrKBxFKwZsUIUWFeZNTXSHDAoFhTcU49tcGXV1Tvc0zvt8hps2AfahBJ-V7RhQ4TM--qzFzabVl3x8yGzB38yYLqreJsYrhM72XnaOsjCpMTRlAURSSyFknaTs"
-    />
-  </div>
-  <div class="flex-1 px-6 flex flex-col justify-center">
+  <div class="flex-1 flex flex-col px-4 py-2 justify-start">
     <div class="mb-4">
+      <div class="flex flex-row">
+        <span class="material-symbols-outlined text-5xl mb-6 text-primary dark:text-white"
+          >style</span
+        >
+        <div class="flex flex-row justify-end ml-auto gap-2">
+          <a
+            class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
+            href="#"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-github text-md"></i>
+          </a>
+          <a
+            class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
+            href="#"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fa-solid fa-arrow-up-right-from-square text-md"></i>
+          </a>
+        </div>
+      </div>
       <a href={`/project/${id}`} class="block">
         <h3
           class="text-lg font-bold text-primary dark:text-white mb-3 group-hover:text-purple-600 dark:group-hover:text-purple-400 transition-colors"
@@ -54,56 +64,7 @@ const { id, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
             ))
           }
         </div>
-
-        {
-          (githubUrl || liveUrl) && (
-            <div class="flex gap-2 opacity-0 group-hover:opacity-100 transition-opacity">
-              {githubUrl && (
-                <a
-                  class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <i class="fab fa-github text-md" />
-                </a>
-              )}
-
-              {liveUrl && (
-                <a
-                  class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square text-md" />
-                </a>
-              )}
-            </div>
-          )
-        }
       </div>
     </div>
-  </div>
-  <div
-    class="absolute top-6 right-6 flex gap-2 opacity-0 group-hover:opacity-100 transition-opacity"
-  >
-    <a
-      class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-      href="#"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <i class="fab fa-github text-md"></i>
-    </a>
-
-    <a
-      class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-      href="#"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <i class="fa-solid fa-arrow-up-right-from-square text-md"></i>
-    </a>
   </div>
 </article>
