--- a/src/components/RecentProjects.astro
+++ b/src/components/RecentProjects.astro
@@ -5,7 +5,7 @@ import ThumbnailProject from '@/components/ThumbnailProject.astro';
 const projects = projectsData.projects.slice(0, 3); // Show only first 2 projects
 ---
 
-<section class="py-24 px-6 bg-gray-50 dark:bg-[#181818]">
+<section class="py-24 bg-gray-50 dark:bg-[#181818]">
   <div class={classes.container}>
     <div class="flex flex-col md:flex-row justify-between items-end mb-16 gap-6">
       <div class="text-left flex-1">
