--- a/src/components/SidebySide.astro
+++ b/src/components/SidebySide.astro
@@ -3,7 +3,7 @@ import Button from '@/components/shared/Button.astro';
 import classes from '@/data/styles.json';
 ---
 
-<section class="bg-secondary-bg py-24 px-6 lg:px-12" id="about">
+<section class="bg-secondary-bg py-24" id="about">
   <div class={classes.container}>
     <div class="flex flex-row gap-8">
       <div class="w-1/3">
