--- a/src/components/ThumbnailProject.astro
+++ b/src/components/ThumbnailProject.astro
@@ -1,4 +1,5 @@
 ---
+import ProjectIcon from './shared/ProjectIcon.astro';
 interface Props {
   title: string;
   shortDescription: string;
@@ -11,31 +12,17 @@ const { id, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
 ---
 
 <article
-  class="group flex flex-col md:flex-row h-full bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-800 rounded-md p-3 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 relative overflow-hidden"
+  class="group flex flex-col md:flex-row h-full bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-800 rounded-md px-4 py-6 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 relative overflow-hidden"
 >
-  <div class="flex-1 flex flex-col px-4 py-2 justify-start">
+  <div class="flex-1 flex flex-col justify-start">
     <div class="mb-4">
       <div class="flex flex-row">
         <span class="material-symbols-outlined text-5xl mb-6 text-primary dark:text-white"
           >style</span
         >
         <div class="flex flex-row justify-end ml-auto gap-2">
-          <a
-            class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-            href="#"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-github text-md"></i>
-          </a>
-          <a
-            class="h-8 w-8 rounded-full bg-gray-100 dark:bg-gray-700 flex items-center justify-center hover:bg-blue-500 hover:text-white transition-colors"
-            href="#"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-solid fa-arrow-up-right-from-square text-md"></i>
-          </a>
+          {githubUrl && <ProjectIcon icon="fab fa-github" link={githubUrl} />}
+          {liveUrl && <ProjectIcon icon="fa-solid fa-arrow-up-right-from-square" link={liveUrl} />}
         </div>
       </div>
       <a href={`/project/${id}`} class="block">
