--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -17,7 +17,7 @@ const currentPath = Astro.url.pathname;
     class={`${styles.container} flex m-auto items-center justify-between rounded-full py-2 transition-all duration-300 group-[.scrolled]:max-w-4xl group-[.scrolled]:bg-navigation-bg group-[.scrolled]:backdrop-blur-xl group-[.scrolled]:shadow-md`}
   >
     <!-- Logo/Brand -->
-    <a href="/" class="flex items-center gap-2 pl-2 w-[100px]">
+    <a href="/" class="flex items-center gap-2 w-[100px]">
       <div
         class="w-8 h-8 text-gray-900 dark:text-white rounded-full flex items-center justify-center"
       >
@@ -45,7 +45,7 @@ const currentPath = Astro.url.pathname;
     </nav>
 
     <!-- Action Buttons -->
-    <div class="flex justify-end items-center gap-2 pr-1 w-[100px]">
+    <div class="flex justify-end items-center gap-2 w-[100px]">
       <!-- Desktop Action Icons -->
       <div class="hidden sm:flex gap-4 pt-1 pr-2">
         {
