--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,30 @@
 ---
 import Header from '@/components/shared/Header.astro';
 import Footer from '@/components/shared/Footer.astro';
-
-// Import JSON data
+import Banner from '@/components/shared/Banner.astro';
+import type { ImageMetadata } from 'astro';
 import globalData from '@/data/global.json';
-
-// Import CSS variables
 import '@/styles/variables.css';
 
 interface Props {
   title: string;
   description: string;
+  heroImage?: ImageMetadata;
+  heroLayout?: 'standard' | 'hero';
   showHeader?: boolean;
   showFooter?: boolean;
   hasHero?: boolean;
 }
 
-const { title, description, showHeader = true, showFooter = true, hasHero = false } = Astro.props;
+const {
+  title,
+  description,
+  showHeader = true,
+  showFooter = true,
+  hasHero = false,
+  heroImage,
+  heroLayout,
+} = Astro.props;
 ---
 
 <!doctype html>
@@ -58,6 +66,12 @@ const { title, description, showHeader = true, showFooter = true, hasHero = fals
     {showHeader && <Header links={globalData.header} socials={globalData.socials} />}
 
     <main class:list={['min-h-screen', { 'mt-28': !hasHero }]}>
+      <Banner
+        heading={title}
+        description={description}
+        heroLayout={heroLayout}
+        heroImage={heroImage}
+      />
       <slot />
     </main>
 
