--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,20 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Hero from '@/components/Hero.astro';
 import RecentWork from '@/components/RecentWork.astro';
 import RecentProjects from '@/components/RecentProjects.astro';
 import SidebySide from '@/components/SidebySide.astro';
+import Photo from '@/assets/images/me.png';
 
-const title = 'Shavar Cox';
-const description =
-  'I help forward-thinking companies build performant, accessible, and beautiful web applications using the modern React ecosystem.';
+const pagePayload = {
+  title: 'Shavar Cox',
+  description:
+    'I help forward-thinking companies build performant, accessible, and beautiful web applications using the modern React ecosystem.',
+  heroLayout: 'hero' as const,
+  heroImage: Photo,
+};
 ---
 
-<Layout title={title} description={description}>
-  <Hero />
+<Layout {...pagePayload}>
   <SidebySide />
   <RecentWork />
   <RecentProjects />
