--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Intro from '@/components/shared/Intro.astro';
 import RecentProjects from '@/components/RecentProjects.astro';
 import SidebySide from '@/components/SidebySide.astro';
 import BackgroundImage from '@/assets/images/developer-mug.jpg';
@@ -10,8 +9,7 @@ const description =
   'I help forward-thinking companies build performant, accessible, and beautiful web applications using the modern React ecosystem.';
 ---
 
-<Layout title={title} description={description} hasHero>
-  <Intro heading={title} description={description} backgroundImage={BackgroundImage} />
+<Layout title={title} description={description} heroImage={BackgroundImage} hasHero>
   <SidebySide />
   <RecentProjects />
 </Layout>
