--- a/src/components/ThumbnailProject.astro
+++ b/src/components/ThumbnailProject.astro
@@ -7,45 +7,46 @@ interface Props {
   githubUrl?: string;
   liveUrl?: string;
   id: string;
+  icon: string;
 }
-const { id, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
+const { id, icon, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
 ---
 
 <article
-  class="group flex flex-col md:flex-row h-full bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-800 rounded-md px-4 py-6 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 relative overflow-hidden"
+  class="group relative flex h-full flex-col overflow-hidden rounded-md border border-gray-200 bg-white px-4 py-6 shadow-sm transition-all duration-500 hover:-translate-y-1 hover:shadow-xl md:flex-row dark:border-gray-800 dark:bg-card-dark"
 >
-  <div class="flex-1 flex flex-col justify-start">
+  <div class="flex flex-1 flex-col justify-start">
     <div class="mb-4">
       <div class="flex flex-row">
-        <span class="material-symbols-outlined text-5xl mb-6 text-primary dark:text-white"
-          >style</span
+        <span class="mb-6 text-5xl text-primary material-symbols-outlined dark:text-white"
+          >{icon}</span
         >
-        <div class="flex flex-row justify-end ml-auto gap-2">
+        <div class="ml-auto flex flex-row justify-end gap-2">
           {githubUrl && <ProjectIcon icon="fab fa-github" link={githubUrl} />}
           {liveUrl && <ProjectIcon icon="fa-solid fa-arrow-up-right-from-square" link={liveUrl} />}
         </div>
       </div>
       <a href={`/project/${id}`} class="block">
         <h3
-          class="text-lg font-bold text-primary dark:text-white mb-3 group-hover:text-purple-600 dark:group-hover:text-purple-400 transition-colors"
+          class="mb-3 text-lg font-bold text-primary transition-colors group-hover:text-purple-600 dark:text-white dark:group-hover:text-purple-400"
         >
           {title}
         </h3>
-        <p class="text-secondary-text dark:text-gray-400 text-sm leading-relaxed mb-6">
+        <p class="mb-6 text-sm leading-relaxed text-secondary-text dark:text-gray-400">
           {shortDescription}
         </p>
       </a>
 
-      <div class="h-px w-full bg-gray-200 dark:bg-gray-700 my-4"></div>
+      <div class="my-4 h-px w-full bg-gray-200 dark:bg-gray-700"></div>
 
       <div class="mt-auto flex items-center justify-between">
-        <div class="flex gap-2 flex-wrap">
+        <div class="flex flex-wrap gap-2">
           {
             tags.map((tag, tagIndex) => (
               <>
-                <span class="text-xs font-mono text-gray-400 dark:text-gray-500">{tag}</span>
+                <span class="font-mono text-xs text-gray-400 dark:text-gray-500">{tag}</span>
                 {tagIndex < tags.length - 1 && (
-                  <span class="text-xs font-mono text-gray-400 dark:text-gray-500">•</span>
+                  <span class="font-mono text-xs text-gray-400 dark:text-gray-500">•</span>
                 )}
               </>
             ))
