add mobile menu button

--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -22,7 +22,10 @@ const { socials, copyright } = Astro.props;
         <span class={classes.preHeading}>Get in Touch</span>
         <h2 class={classes.heading}>Let's work together</h2>
         <p class={classes.secondaryText}>
-          I'm currently available for freelance work and open to full-time opportunities.
+          I'm currently available for freelance work and open to full-time opportunities. I consider
+          feedback to be a valuable tool for constant improvement and is always welcomed. If you
+          have any questions or just want to say Hello, feel free to drop me a line via
+          shavarsean(at)gmail.com or by using the form .
         </p>
         <div class="flex flex-col items-center gap-6 pt-8">
           <Button style="primary" href="#">
